--- a/src/guide/AA.html
+++ b/src/guide/AA.html
@@ -42,11 +42,17 @@ layout: layouts/base.njk
     </div>
 </div>
 
-<div class="w-[900px] mx-auto">
+<div class="w-[768px] mx-auto max-w-full">
 <div class="py-10 pl-4" >
-<p class="pb-8" style="font-family: sans-serif;"> 1 ゲームからコンピュータを学ぼう =========================>></p>
+<p class="pb-8 w-full h-7 overflow-hidden" style="font-family: sans-serif;"> 1 ゲームからコンピュータを学ぼう == == == == == ====>></p>
 
-<div class="flex">
+<div class="md:flex py-1">
+    <div class="aahub  pl-4 font-sm leading-5 md:pt-4 md:order-2">
+        <p>
+            今回は，コンピュータについて学ぶ．<br>
+            まずは，このゲームをやってみてくれ．
+        </p>
+    </div>
     <pre class="aahub AA w-fit">
 　　 　　 ／￣￣＼
 　　　 ／　　 _ノ　　＼
@@ -59,25 +65,18 @@ layout: layouts/base.njk
 :　 　| 　';　＼_____ ノ.| ヽ
 　 　 |　　＼/ﾞ（__)＼,| 　i
 　 　 ＞　　 ヽ. ハ　 | 　 |
-
     </pre>
-    <div class="aahub  pl-4 font-sm leading-5 pt-4 ">
-        <p>
-            今回は，コンピュータについて学ぶ．<br>
-            まずは，このゲームをやってみてくれ．
-        </p>
-    </div>
 </div>
 
 
-<div class="flex">
-    <div class="aahub  pl-4 font-sm leading-5 pt-4 ">
+<div class="md:flex py-1">
+    <div class="aahub  pl-4 font-sm leading-5 md:pt-4 ">
         <p>
             ゲーム？それが，コンピュータと<br>
             なんか関係あるのか？
         </p>
     </div>
-    <pre class="aahub AA w-fit">
+    <pre class="aahub AA w-fit max-md:pl-32">
 　 　　　＿＿＿_
 　　　／　　 　 　＼
 　 ／─　 　 ─　　＼
